Unity type system changes

--- a/Unity/Unity.vcxproj
+++ b/Unity/Unity.vcxproj
@@ -76,6 +76,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Type.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="Unity.cpp" />
   </ItemGroup>
   <ItemGroup>
