--- a/Unity/Unity.vcxproj
+++ b/Unity/Unity.vcxproj
@@ -86,11 +86,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\unity\array.h" />
+    <ClInclude Include="..\include\unity\buffer.h" />
     <ClInclude Include="..\include\unity\file.h" />
     <ClInclude Include="..\include\unity\hashtable.h" />
     <ClInclude Include="..\include\unity\integer_types.h" />
     <ClInclude Include="..\include\unity\reference_counted.h" />
     <ClInclude Include="..\include\unity\string.h" />
+    <ClInclude Include="..\include\unity\uncopyable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
