Get function calls working

--- a/Unity/Unity.vcxproj
+++ b/Unity/Unity.vcxproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <ClInclude Include="..\include\unity\array.h" />
     <ClInclude Include="..\include\unity\buffer.h" />
+    <ClInclude Include="..\include\unity\character_source.h" />
     <ClInclude Include="..\include\unity\file.h" />
     <ClInclude Include="..\include\unity\hashtable.h" />
     <ClInclude Include="..\include\unity\integer_types.h" />
