--- a/Unity/Unity.vcxproj
+++ b/Unity/Unity.vcxproj
@@ -126,6 +126,7 @@
     <ClInclude Include="..\include\unity\file.h" />
     <ClInclude Include="..\include\unity\hash_table.h" />
     <ClInclude Include="..\include\unity\integer_types.h" />
+    <ClInclude Include="..\include\unity\linked_list.h" />
     <ClInclude Include="..\include\unity\reference_counted.h" />
     <ClInclude Include="..\include\unity\stack.h" />
     <ClInclude Include="..\include\unity\string.h" />
