--- a/8088/demo/cga/attribute_clash/attribute_clash.vcxproj
+++ b/8088/demo/cga/attribute_clash/attribute_clash.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="..\..\..\..\include\unity\buffer.h" />
     <ClInclude Include="..\..\..\..\include\unity\file.h" />
     <ClInclude Include="..\..\..\..\include\unity\main.h" />
+    <ClInclude Include="..\..\..\..\include\unity\perceptual.h" />
     <ClInclude Include="..\..\..\..\include\unity\string.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
