--- a/image_resample/741.config
+++ b/image_resample/741.config
@@ -1,5 +1,5 @@
 inputPicture = "q:/741.png";
 outputSize = Vector(300, 144);
 subpixels = false;
-tripleResolution = false;
+tripleResolution = true;
 outputPicture = "q:/741small.png";
