--- a/image_resample/lenna.config
+++ b/image_resample/lenna.config
@@ -1,6 +1,6 @@
-inputPicture = "q:/lenna.png";
+inputPicture = "../../lenna.png";
 outputSize = Vector(128, 128);
 subpixels = true;
 tripleResolution = false;
-outputPicture = "q:/lenna_subpixels.png";
+outputPicture = "../../lenna_subpixels.png";
 
