--- a/image_resample/compaq.config
+++ b/image_resample/compaq.config
@@ -1,6 +1,6 @@
-inputPicture = "q:/compaq.png";
+inputPicture = "../../compaq.png";
 outputSize = Vector(100, 98);
 subpixels = true;
 tripleResolution = false;
-outputPicture = "q:/compaq_subpixels.png";
+outputPicture = "../../compaq_subpixels.png";
 
