--- a/8088/arduino_keyboard/run/run.vcxproj
+++ b/8088/arduino_keyboard/run/run.vcxproj
@@ -76,6 +76,11 @@
   <ItemGroup>
     <ClCompile Include="run.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\include\unity\file.h" />
+    <ClInclude Include="..\..\..\include\unity\main.h" />
+    <ClInclude Include="..\..\..\include\unity\string.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
