--- a/8088/arduino_keyboard/send/send.vcxproj
+++ b/8088/arduino_keyboard/send/send.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="..\..\..\include\unity\main.h" />
     <ClInclude Include="..\..\..\include\unity\reference_counted.h" />
     <ClInclude Include="..\..\..\include\unity\string.h" />
+    <ClInclude Include="..\..\..\include\unity\thread.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
