--- a/8088/demo/cga/attribute_clash/attribute_clash.vcxproj
+++ b/8088/demo/cga/attribute_clash/attribute_clash.vcxproj
@@ -72,6 +72,7 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
       <FloatingPointModel>Fast</FloatingPointModel>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -85,6 +86,7 @@
     <ClCompile Include="attribute_clash.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\include\unity\any.h" />
     <ClInclude Include="..\..\..\..\include\unity\array.h" />
     <ClInclude Include="..\..\..\..\include\unity\bitmap.h" />
     <ClInclude Include="..\..\..\..\include\unity\buffer.h" />
@@ -102,6 +104,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="todo.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Projects\Code\libpng\projects\vstudio\libpng\libpng.vcxproj">
+      <Project>{d6973076-9317-4ef2-a0b8-b7a18ac0713e}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
