Attribute clash digital

--- a/8088/demo/cga/attribute_clash/rose_hres_composite_50.config
+++ b/8088/demo/cga/attribute_clash/rose_hres_composite_50.config
@@ -2,14 +2,14 @@ cgaRomFile = "/t/projects/emulation/mamemess/mess_run/roms/pc/5788005.u33";
 inputPicture = "/t/colorful_rose_cropped.png";
 outputNTSC = "/t/rose_hres_composite_50.ntsc";
 outputComposite = "/t/rose_hres_composite_50.png";
-outputRGB = "/t/rose_hres_composite_50_rgb.png";
+outputDigital = "/t/rose_hres_composite_50_rgb.png";
 outputData = "/t/rose_hres_composite_50.dat";
 compositeTarget = true;
 hres = true;
 inputSize = Vector(57*8, 143);  // 57*143*2 = 16302 which is less than 16384 and 57*4/143 ~= 4/3
-inputOffset = Vector(88, 28);   // Center it as best we can
+outputSize = Vector(672, 216);  // Size of output image in hdots*scanlines
+offset = Vector(108, 36);     // Center it as best we can
 overscanColour = 6;  // Standard dark yellow
-outputCompositeSize = Vector(640+8, 200+8);
 iterations = 2;
 
 // colourSpace can be srgb, rgb, xyz, luv or lab.
