--- a/8088/demo/cga/attribute_clash/rose_lres_composite.config
+++ b/8088/demo/cga/attribute_clash/rose_lres_composite.config
@@ -2,14 +2,14 @@ cgaRomFile = "/t/projects/emulation/mamemess/mess_run/roms/pc/5788005.u33";
 inputPicture = "/t/pictures/reenigne/colorful_rose_cropped.png";
 outputNTSC = "/t/rose_lres_composite.ntsc";
 outputComposite = "/t/rose_lres_composite.png";
-outputRGB = "/t/rose_lres_composite_rgb.png";
+outputDigital = "/t/rose_lres_composite_rgb.png";
 outputData = "/t/rose_lres_composite.dat";
 compositeTarget = true;
 hres = false;
-inputSize = Vector(80*8, 200);
-inputOffset = Vector(0, 0);   // Center it as best we can
+inputSize = Vector(640, 200);
+outputSize = Vector(672, 216);  // Size of output image in hdots*scanlines
+offset = Vector(16, 8);     // Center it as best we can
 overscanColour = 6;  // Standard dark yellow
-outputCompositeSize = Vector(640+8, 200+8);
 iterations = 2;
 
 // colourSpace can be srgb, rgb, xyz, luv or lab.
