--- a/8088/demo/cga/attribute_clash/rose_lres_digital.config
+++ b/8088/demo/cga/attribute_clash/rose_lres_digital.config
@@ -2,7 +2,7 @@ cgaRomFile = "/t/projects/emulation/mamemess/mess_run/roms/pc/5788005.u33";
 inputPicture = "/t/pictures/reenigne/colorful_rose_cropped.png";
 outputNTSC = "/t/rose_lres_composite.ntsc";
 outputComposite = "/t/rose_lres_composite.png";
-outputRGB = "/t/rose_lres_composite_rgb.png";
+outputDigital = "/t/rose_lres_composite_rgb.png";
 outputData = "/t/rose_lres_composite.dat";
 compositeTarget = false;
 hres = false;
