--- a/8088/ibm5160.config
+++ b/8088/ibm5160.config
@@ -1,3 +1,4 @@
 roms = {
-  {0xf000, "/t/projects/emulation/pc/roms/5000027.u19"},
-  {0xf800, "/t/projects/emulation/pc/roms/1501512.u18"}};
+  // Physical address start   Filename                   Length  File offset
+  {0xf6000, "/t/projects/emulation/pc/roms/5000027.u19", 0x2000, 0x6000},
+  {0xf8000, "/t/projects/emulation/pc/roms/1501512.u18", 0x8000, 0x0000}};
