8088 emulator state saving

--- a/8088/8088.vcxproj
+++ b/8088/8088.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="..\include\unity\config_file.h" />
     <ClInclude Include="..\include\unity\hash_table.h" />
     <ClInclude Include="..\include\unity\integer_types.h" />
+    <ClInclude Include="..\include\unity\main.h" />
     <ClInclude Include="..\include\unity\reference_counted.h" />
     <ClInclude Include="..\include\unity\space.h" />
     <ClInclude Include="..\include\unity\string.h" />
