--- a/8088/ibm5160.config
+++ b/8088/ibm5160.config
@@ -3,6 +3,8 @@ roms = {
   {0xfe000, 0xf6000, "/t/projects/emulation/pc/roms/5000027.u19", 0x6000},
   {0xf8000, 0xf8000, "/t/projects/emulation/pc/roms/1501512.u18", 0x0000}};
 
-stopAtCycle = 271039;
+//stopAtCycle = 271039;
 //stopAtCycle = 1;
-stopSaveState = "saved.state";
+//stopSaveState = "saved.state";
+
+include "saved.state";
