--- a/euclids_orchard/euclids_orchard.vcxproj
+++ b/euclids_orchard/euclids_orchard.vcxproj
@@ -84,7 +84,9 @@
     <ClInclude Include="..\include\unity\buffer.h" />
     <ClInclude Include="..\include\unity\file.h" />
     <ClInclude Include="..\include\unity\integer_types.h" />
+    <ClInclude Include="..\include\unity\minimum_maximum.h" />
     <ClInclude Include="..\include\unity\string.h" />
+    <ClInclude Include="..\include\unity\swap.h" />
     <ClInclude Include="..\include\unity\vectors.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
