--- a/intervals/simulator/simulator.vcxproj
+++ b/intervals/simulator/simulator.vcxproj
@@ -83,6 +83,10 @@
   <ItemGroup>
     <ClCompile Include="simulator.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\include\unity\main.h" />
+    <ClInclude Include="..\..\include\unity\string.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
