--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{4BD8BCBB-F060-4D32-9174-09B34BB4DCE7}</ProjectGuid>
+    <ProjectGuid>{CBD4CEA0-4F62-41A3-8A69-7431DEABACAE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>attribute_clash</RootNamespace>
+    <RootNamespace>test</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -39,12 +39,9 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\t\Projects\Code\libpng;D:\t\reenigne\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\t\Projects\Code\libpng;D:\t\reenigne\include;$(IncludePath)</IncludePath>
-    <TargetName>$(ProjectName)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -52,10 +49,10 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -64,53 +61,20 @@
       <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>
       </PrecompiledHeader>
-      <Optimization>Full</Optimization>
+      <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <OmitFramePointers>true</OmitFramePointers>
-      <FloatingPointModel>Fast</FloatingPointModel>
-      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="attribute_clash.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\..\include\unity\any.h" />
-    <ClInclude Include="..\..\..\..\include\unity\array.h" />
-    <ClInclude Include="..\..\..\..\include\unity\bitmap.h" />
-    <ClInclude Include="..\..\..\..\include\unity\buffer.h" />
-    <ClInclude Include="..\..\..\..\include\unity\character_source.h" />
-    <ClInclude Include="..\..\..\..\include\unity\colour_space.h" />
-    <ClInclude Include="..\..\..\..\include\unity\config_file.h" />
-    <ClInclude Include="..\..\..\..\include\unity\file.h" />
-    <ClInclude Include="..\..\..\..\include\unity\handle.h" />
-    <ClInclude Include="..\..\..\..\include\unity\hash_table.h" />
-    <ClInclude Include="..\..\..\..\include\unity\main.h" />
-    <ClInclude Include="..\..\..\..\include\unity\reference_counted_array.h" />
-    <ClInclude Include="..\..\..\..\include\unity\space.h" />
-    <ClInclude Include="..\..\..\..\include\unity\string.h" />
-    <ClInclude Include="..\..\..\..\include\unity\symbol.h" />
-    <ClInclude Include="..\..\..\..\include\unity\user.h" />
-    <ClInclude Include="..\..\..\..\include\unity\vectors.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="todo.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\Projects\Code\libpng\projects\vstudio\libpng\libpng.vcxproj">
-      <Project>{d6973076-9317-4ef2-a0b8-b7a18ac0713e}</Project>
-    </ProjectReference>
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
