--- a/crc32/crc32.vcxproj
+++ b/crc32/crc32.vcxproj
@@ -50,7 +50,6 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -66,8 +65,6 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../include</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -80,10 +77,20 @@
     <ClCompile Include="crc32.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\alfe\array.h" />
     <ClInclude Include="..\include\alfe\character_source.h" />
+    <ClInclude Include="..\include\alfe\exception.h" />
     <ClInclude Include="..\include\alfe\file.h" />
+    <ClInclude Include="..\include\alfe\file_handle.h" />
+    <ClInclude Include="..\include\alfe\find_handle.h" />
+    <ClInclude Include="..\include\alfe\handle.h" />
     <ClInclude Include="..\include\alfe\integer_types.h" />
+    <ClInclude Include="..\include\alfe\main.h" />
+    <ClInclude Include="..\include\alfe\minimum_maximum.h" />
+    <ClInclude Include="..\include\alfe\reference_counted.h" />
     <ClInclude Include="..\include\alfe\string.h" />
+    <ClInclude Include="..\include\alfe\swap.h" />
+    <ClInclude Include="..\include\alfe\uncopyable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
