--- a/8088/demo/cga/attribute_clash/rose_lres_composite.config
+++ b/8088/demo/cga/attribute_clash/rose_lres_composite.config
@@ -14,4 +14,5 @@ iterations = 2;
 
 // colourSpace can be srgb, rgb, xyz, luv or lab.
 // However, perceptual colour spaces seem to produce inferior images for some reason, as well as being very slow.
-colourSpace = srgb;
+//colourSpace = srgb;
+colourSpace = luv;
