Conversion of Symbols to classes

--- a/8088/demo/cga/attribute_clash/rose_lres_composite.config
+++ b/8088/demo/cga/attribute_clash/rose_lres_composite.config
@@ -3,6 +3,7 @@ inputPicture = "/t/pictures/reenigne/colorful_rose_cropped.png";
 outputNTSC = "/t/rose_lres_composite.ntsc";
 outputComposite = "/t/rose_lres_composite.png";
 outputDigital = "/t/rose_lres_composite_rgb.png";
+outputDigitalRaw = "/t/rose_lres_composite_rgbi.raw";
 outputData = "/t/rose_lres_composite.dat";
 compositeTarget = true;
 hres = false;
